--- a/public/css/app.css
+++ b/public/css/app.css
@@ -588,6 +588,14 @@ video {
   margin-bottom: 3.5rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-7 {
+  margin-bottom: 1.75rem;
+}
+
 .mb-9 {
   margin-bottom: 2.25rem;
 }
@@ -598,14 +606,6 @@ video {
 
 .mt-0 {
   margin-top: 0px;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-7 {
-  margin-bottom: 1.75rem;
 }
 
 .block {
@@ -648,6 +648,14 @@ video {
   height: 50px;
 }
 
+.h-\[60px\] {
+  height: 60px;
+}
+
+.h-\[70px\] {
+  height: 70px;
+}
+
 .h-\[80px\] {
   height: 80px;
 }
@@ -659,14 +667,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.h-\[70px\] {
-  height: 70px;
-}
-
-.h-\[60px\] {
-  height: 60px;
 }
 
 .max-h-\[500px\] {
@@ -701,6 +701,14 @@ video {
   width: 50px;
 }
 
+.w-\[60px\] {
+  width: 60px;
+}
+
+.w-\[70px\] {
+  width: 70px;
+}
+
 .w-\[98px\] {
   width: 98px;
 }
@@ -714,28 +722,12 @@ video {
   width: 100%;
 }
 
-.w-\[70px\] {
-  width: 70px;
-}
-
-.w-\[60px\] {
-  width: 60px;
-}
-
 .max-w-\[1260px\] {
   max-width: 1260px;
 }
 
 .max-w-\[250px\] {
   max-width: 250px;
-}
-
-.max-w-\[300px\] {
-  max-width: 300px;
-}
-
-.max-w-\[400px\] {
-  max-width: 400px;
 }
 
 .max-w-\[350px\] {
@@ -769,10 +761,6 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
-}
-
-.cursor-not-allowed {
-  cursor: not-allowed;
 }
 
 .grid-cols-1 {
@@ -871,6 +859,10 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -881,14 +873,6 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-\[20px\] {
-  border-radius: 20px;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
 }
 
 .border-b {
@@ -953,12 +937,12 @@ video {
   padding: 0px;
 }
 
-.p-\[16px\] {
-  padding: 16px;
-}
-
 .p-4 {
   padding: 1rem;
+}
+
+.p-\[16px\] {
+  padding: 16px;
 }
 
 .px-2 {
@@ -974,11 +958,6 @@ video {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .py-10 {
@@ -1004,16 +983,6 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.px-\[20px\] {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.py-\[20px\] {
-  padding-top: 20px;
-  padding-bottom: 20px;
 }
 
 .pb-14 {
@@ -1042,18 +1011,6 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pt-\[80px\] {
-  padding-top: 80px;
-}
-
-.pt-36 {
-  padding-top: 9rem;
-}
-
-.pt-\[96px\] {
-  padding-top: 96px;
 }
 
 .pt-\[88px\] {
@@ -1114,40 +1071,24 @@ video {
   font-weight: 600;
 }
 
-.font-bold {
-  font-weight: 700;
-}
-
 .font-light {
   font-weight: 300;
-}
-
-.font-semibold {
-  font-weight: 600;
 }
 
 .font-medium {
   font-weight: 500;
 }
 
-.leading-normal {
-  line-height: 1.5;
-}
-
-.leading-10 {
-  line-height: 2.5rem;
-}
-
-.leading-\[56px\] {
-  line-height: 56px;
-}
-
-.leading-\[44px\] {
-  line-height: 44px;
+.font-semibold {
+  font-weight: 600;
 }
 
 .leading-\[40px\] {
   line-height: 40px;
+}
+
+.leading-normal {
+  line-height: 1.5;
 }
 
 .text-pr-lavender {
@@ -1293,11 +1234,6 @@ video {
   cursor: not-allowed;
 }
 
-.disabled\:bg-slate-300:disabled {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
-}
-
 .disabled\:opacity-70:disabled {
   opacity: 0.7;
 }
@@ -1342,8 +1278,8 @@ video {
 }
 
 @media (min-width: 500px) {
-  .hp\:relative {
-    position: relative;
+  .hp\:mb-0 {
+    margin-bottom: 0px;
   }
 
   .hp\:mb-14 {
@@ -1358,20 +1294,8 @@ video {
     margin-top: 7rem;
   }
 
-  .hp\:mb-0 {
-    margin-bottom: 0px;
-  }
-
   .hp\:inline-block {
     display: inline-block;
-  }
-
-  .hp\:flex {
-    display: flex;
-  }
-
-  .hp\:hidden {
-    display: none;
   }
 
   .hp\:h-\[100px\] {
@@ -1430,20 +1354,16 @@ video {
     gap: 0.75rem;
   }
 
+  .hp\:gap-5 {
+    gap: 1.25rem;
+  }
+
   .hp\:gap-6 {
     gap: 1.5rem;
   }
 
   .hp\:gap-9 {
     gap: 2.25rem;
-  }
-
-  .hp\:gap-7 {
-    gap: 1.75rem;
-  }
-
-  .hp\:gap-5 {
-    gap: 1.25rem;
   }
 
   .hp\:border-none {
@@ -1473,6 +1393,10 @@ video {
     padding-bottom: 6rem;
   }
 
+  .hp\:pb-28 {
+    padding-bottom: 7rem;
+  }
+
   .hp\:pt-0 {
     padding-top: 0px;
   }
@@ -1485,12 +1409,8 @@ video {
     padding-top: 9rem;
   }
 
-  .hp\:pb-28 {
-    padding-bottom: 7rem;
-  }
-
-  .hp\:pt-44 {
-    padding-top: 11rem;
+  .hp\:text-left {
+    text-align: left;
   }
 
   .hp\:text-2xl {
@@ -1511,11 +1431,6 @@ video {
   .hp\:text-5xl {
     font-size: 3rem;
     line-height: 1;
-  }
-
-  .hp\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 
   .hp\:text-lg {
@@ -1569,12 +1484,12 @@ video {
     margin-bottom: 0px;
   }
 
-  .ipad\:mr-9 {
-    margin-right: 2.25rem;
-  }
-
   .ipad\:mb-14 {
     margin-bottom: 3.5rem;
+  }
+
+  .ipad\:mr-9 {
+    margin-right: 2.25rem;
   }
 
   .ipad\:flex {
@@ -1666,16 +1581,12 @@ video {
     max-width: 310px;
   }
 
-  .tablet\:max-w-\[640px\] {
-    max-width: 640px;
-  }
-
-  .tablet\:max-w-\[430px\] {
-    max-width: 430px;
-  }
-
   .tablet\:max-w-\[400px\] {
     max-width: 400px;
+  }
+
+  .tablet\:max-w-\[640px\] {
+    max-width: 640px;
   }
 
   .tablet\:scale-100 {
